--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   "dependencies": {
     "@nestjs/bull": "^10.1.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@supabase/supabase-js": "^2.49.4",
     "bull": "^4.12.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
